文件目录结构调整

--- a/examples/index.html
+++ b/examples/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 <div id="app"></div>
-<script src="src/treact.js"></script>
+<script type="text/javascript" src="treact.js"></script>
+<script type="text/javascript" src="app.js"></script>
 </body>
 </html>
